--- a/PromoStudio.Storage/app.config
+++ b/PromoStudio.Storage/app.config
@@ -31,6 +31,21 @@
             <setting name="VidyardApiSecret" serializeAs="String">
                 <value>goldmine</value>
             </setting>
+            <setting name="VimeoApiClientId" serializeAs="String">
+                <value>2eff82107e5b7abb7b83889168a5385d4546be90</value>
+            </setting>
+            <setting name="VimeoApiClientSecret" serializeAs="String">
+                <value>802c6e4ef26ca3df7dcc956c7c2f0514d927507c</value>
+            </setting>
+            <setting name="VimeoApiAccessToken" serializeAs="String">
+                <value>6ab2b3453d507d15e84616b92b7c58d8</value>
+            </setting>
+            <setting name="VimeoApiAccessTokenSecret" serializeAs="String">
+                <value>4d5f61bd6ae663c62937b522aa37a059f2d69c86</value>
+            </setting>
+            <setting name="VimeoApiPresetId" serializeAs="String">
+                <value>358907</value>
+            </setting>
         </PromoStudio.Storage.Properties.Settings>
     </applicationSettings>
 </configuration>
