--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -210,12 +210,17 @@
     <Content Include="Content\images\btn-play.png" />
     <Content Include="Content\images\btn-play2.png" />
     <Content Include="Content\images\btn-stop2.png" />
-    <Content Include="Content\images\card-ameex.gif" />
+    <Content Include="Content\images\card-amex.gif" />
     <Content Include="Content\images\card-discover.gif" />
     <Content Include="Content\images\card-mc.gif" />
     <Content Include="Content\images\card-visa.gif" />
     <Content Include="Content\images\dotted.gif" />
-    <Content Include="Content\images\fancybox\fancybox.png" />
+    <Content Include="Content\images\fancybox\blank.gif" />
+    <Content Include="Content\images\fancybox\fancybox_loading%402x.gif" />
+    <Content Include="Content\images\fancybox\fancybox_loading.gif" />
+    <Content Include="Content\images\fancybox\fancybox_overlay.png" />
+    <Content Include="Content\images\fancybox\fancybox_sprite%402x.png" />
+    <Content Include="Content\images\fancybox\fancybox_sprite.png" />
     <Content Include="Content\images\graph01.png" />
     <Content Include="Content\images\graph02.png" />
     <Content Include="Content\images\ico-align-center.png" />
@@ -252,7 +257,9 @@
     <Content Include="Scripts\lib\jquery-1.10.2.js" />
     <Content Include="Scripts\lib\jquery-1.8.3.js" />
     <Content Include="Scripts\lib\jquery-1.9.1.js" />
+    <Content Include="Scripts\lib\jquery.fancybox.js" />
     <Content Include="Scripts\lib\jquery.main.js" />
+    <Content Include="Scripts\lib\jquery.mousewheel.js" />
     <Content Include="Scripts\lib\knockout-3.0.0.js" />
     <Content Include="Scripts\optimizedRequireConfig.js" />
     <Content Include="Scripts\lib\ko.jplayer.js" />
@@ -260,6 +267,7 @@
     <Content Include="Scripts\lib\jquery.jplayer.js" />
     <Content Include="Scripts\viewModels\callToActionSectionViewModel.js" />
     <Content Include="Scripts\viewModels\accountDashboardViewModel.js" />
+    <Content Include="Scripts\viewModels\customerResourceViewModel.js" />
     <Content Include="Scripts\viewModels\endingSectionViewModel.js" />
     <Content Include="Scripts\viewModels\musicViewModel.js" />
     <Content Include="Scripts\viewModels\customerVideoViewModel.js" />
