--- a/PromoStudio.Storage/packages.config
+++ b/PromoStudio.Storage/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="LitS3" version="1.0.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
-  <package id="RestSharp" version="104.2.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
+  <package id="VimeoDotNet" version="0.6.1.0" targetFramework="net45" />
 </packages>
