--- a/PromoStudio.CloudStatusService/packages.config
+++ b/PromoStudio.CloudStatusService/packages.config
@@ -6,4 +6,6 @@
   <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net45" />
   <package id="Nito.AsyncEx" version="1.0.0" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
+  <package id="VimeoDotNet" version="0.6.3.0" targetFramework="net45" />
 </packages>
