--- a/PromoStudio.RenderQueueService/packages.config
+++ b/PromoStudio.RenderQueueService/packages.config
@@ -8,4 +8,6 @@
   <package id="Microsoft.Tpl.Dataflow" version="4.5.9" targetFramework="net45" />
   <package id="Nito.AsyncEx" version="0.15.0-beta" targetFramework="net45" />
   <package id="Nito.AsyncEx.DataflowProxy" version="1.0.1" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
+  <package id="VimeoDotNet" version="0.6.3.0" targetFramework="net45" />
 </packages>
