--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -200,6 +200,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <None Include="app.build.js" />
+    <Content Include="Content\css\fancybox.min.css" />
+    <Content Include="Content\css\site.min.css" />
     <Content Include="Content\fonts\proxima2bnova2bthin-webfont.svg" />
     <Content Include="Content\fonts\proximanova-light-webfont.svg" />
     <Content Include="Content\fonts\proximanova-lightitalic-webfont.svg" />
@@ -255,12 +257,13 @@
     <Content Include="Content\images\sprite.png" />
     <Content Include="Scripts\lib\ie.js" />
     <Content Include="Scripts\lib\jquery-1.10.2.js" />
-    <Content Include="Scripts\lib\jquery-1.8.3.js" />
-    <Content Include="Scripts\lib\jquery-1.9.1.js" />
+    <Content Include="Scripts\lib\jquery-1.11.0.js" />
+    <Content Include="Scripts\lib\jquery.crop.js" />
     <Content Include="Scripts\lib\jquery.fancybox.js" />
     <Content Include="Scripts\lib\jquery.main.js" />
     <Content Include="Scripts\lib\jquery.mousewheel.js" />
     <Content Include="Scripts\lib\knockout-3.0.0.js" />
+    <Content Include="Scripts\lib\knockout-3.1.0.js" />
     <Content Include="Scripts\optimizedRequireConfig.js" />
     <Content Include="Scripts\lib\ko.jplayer.js" />
     <Content Include="Scripts\lib\Jplayer.swf" />
@@ -322,7 +325,6 @@
     <Content Include="Scripts\lib\history.js" />
     <Content Include="Scripts\lib\jquery-scrolltofixed.js" />
     <Content Include="Scripts\lib\jquery.pjax.js" />
-    <Content Include="Scripts\lib\knockout-2.3.0.js" />
     <Content Include="Scripts\lib\ko.custom.js" />
     <Content Include="Scripts\lib\normalize.js" />
     <Content Include="Scripts\models\audioScriptTemplate.js" />
@@ -382,7 +384,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\css\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
