--- a/PromoStudio.Web/Web.config
+++ b/PromoStudio.Web/Web.config
@@ -109,7 +109,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <staticContent>
-      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <!--<mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />-->
     </staticContent>
   </system.webServer>
   <runtime>
