--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -255,6 +255,7 @@
     <Content Include="Content\images\signin-google-sprite.png" />
     <Content Include="Content\images\signin-twitter-sprite.png" />
     <Content Include="Content\images\sprite.png" />
+    <Content Include="Scripts\lib\fileuploader.js" />
     <Content Include="Scripts\lib\ie.js" />
     <Content Include="Scripts\lib\jquery-1.10.2.js" />
     <Content Include="Scripts\lib\jquery-1.11.0.js" />
