added resource upload to S3

--- a/PromoStudio.Rendering/Properties/Settings.settings
+++ b/PromoStudio.Rendering/Properties/Settings.settings
@@ -1,7 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
-              GeneratedClassNamespace="PromoStudio.Rendering.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="PromoStudio.Rendering.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="AfterEffectsExePath" Type="System.String" Scope="Application">
@@ -27,9 +25,6 @@
     </Setting>
     <Setting Name="RenderProjectPreviewOutputTemplate" Type="System.String" Scope="Application">
       <Value Profile="(Default)">NTSC-H264</Value>
-    </Setting>
-    <Setting Name="UploadPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\PromoStudio\Uploads</Value>
     </Setting>
   </Settings>
 </SettingsFile>
