--- a/PromoStudio.Storage/app.config
+++ b/PromoStudio.Storage/app.config
@@ -35,6 +35,9 @@
       <setting name="VimeoApiPresetId" serializeAs="String">
         <value>358907</value>
       </setting>
+      <setting name="LocalStoragePath" serializeAs="String">
+        <value>C:\PromoStudio\Uploads</value>
+      </setting>
     </PromoStudio.Storage.Properties.Settings>
   </applicationSettings>
 </configuration>
