--- a/PromoStudio.Web/PromoStudio.Web.csproj
+++ b/PromoStudio.Web/PromoStudio.Web.csproj
@@ -268,6 +268,8 @@
     <Content Include="Scripts\lib\knockout-3.1.0.js" />
     <Content Include="Scripts\lib\jso.store.js" />
     <Content Include="Scripts\lib\jso.utils.js" />
+    <Content Include="Scripts\lib\ko.soundjs.js" />
+    <Content Include="Scripts\lib\soundjs-0.5.2.js" />
     <Content Include="Scripts\optimizedRequireConfig.js" />
     <Content Include="Scripts\lib\ko.jplayer.js" />
     <Content Include="Scripts\lib\Jplayer.swf" />
